[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Artem Malyshev <proofit404@gmail.com>"]
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
description = "Sentry breadcrumbs for stories executed before the failure."
documentation = "https://proofit404.github.io/stories-sentry"
homepage = "https://pypi.org/project/stories-sentry"
license = "BSD-2-Clause"
name = "stories-sentry"
packages = [
    { include = "_stories_sentry", from = "src" },
    { include = "stories_sentry", from = "src" },
]
readme = "docs/index.md"
repository = "https://github.com/proofit404/stories-sentry"
version = "0.2.0dev0"

[tool.poetry.dependencies]
python = "~3.6 || ~3.7 || ~3.8 || ~3.9"

[tool.poetry.urls]
Changelog = "https://proofit404.github.io/stories-sentry/changelog"
Issues = "https://github.com/proofit404/stories-sentry/issues"
